LED matrix working with good font

--- a/clock_with_secrets.yaml
+++ b/clock_with_secrets.yaml
@@ -39,24 +39,52 @@ time:
         - lambda: |-
             ESP_LOGI("time", "Aktuelle Zeit: %s", id(homeassistant_time).now().strftime("%Y-%m-%d %H:%M:%S").c_str());
 
-# LCD 1602 Display-Konfiguration (4-Bit parallel) - Sichere GPIO-Pins
-display:
-  - platform: lcd_gpio
-    dimensions: 16x2
-    data_pins:
-      - D5  # GPIO14 - sicher
-      - D6  # GPIO12 - sicher  
-      - D7  # GPIO13 - sicher
-      - D1  # GPIO5 - sicher (statt D8/GPIO15)
-    enable_pin: D2  # GPIO4 - sicher (statt D3/GPIO0)
-    rs_pin: D0      # GPIO16 - sicher (statt D2/GPIO4)
-    # rw_pin wird nicht verwendet (an GND)
-    lambda: |-
-      // Erste Zeile: Datum
-      it.strftime(0, 0, "%d.%m.%Y", id(homeassistant_time).now());
-      // Zweite Zeile: Uhrzeit  
-      it.strftime(0, 1, "%H:%M:%S", id(homeassistant_time).now());
+# SPI für LED Matrix
+spi:
+  clk_pin: D5   # CLK
+  mosi_pin: D7  # DIN/DOUT
 
+# Font für LED Matrix - eight-bit-dragon Schriftart
+font:
+  - file: "eight_bit_dragon/eight-bit-dragon.otf"
+    id: digit_font
+    size: 8
+    glyphs: "0123456789:.- ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+
+# 32x8 LED Matrix Display (4x MAX7219)
+display:
+  - platform: max7219digit
+    cs_pin: D8  # CS
+    num_chips: 4  # 4 verkettete 8x8 Matrizen
+    intensity: 8  # Helligkeit (0-15)
+    rotate_chip: 0
+    reverse_enable: false
+    lambda: |-
+      // Aktuelle Zeit von Home Assistant abrufen
+      auto time = id(homeassistant_time).now();
+      if (time.is_valid()) {
+        // Alle 5 Sekunden zwischen Zeit und Datum wechseln
+        static uint32_t last_switch = 0;
+        static bool show_time = true;
+        
+        uint32_t now_ms = millis();
+        if (now_ms - last_switch > 5000) {  // 5 Sekunden
+          show_time = !show_time;
+          last_switch = now_ms;
+        }
+        
+        if (show_time) {
+          // Zeit im Format HH:MM anzeigen
+          it.strftime(3, 0, id(digit_font), "%H:%M", time);
+        } else {
+          // Datum im Format DD.MM anzeigen
+          it.strftime(3, 0, id(digit_font), "%d.%m", time);
+        }
+      } else {
+        // Fallback wenn Zeit nicht verfügbar
+        it.print(3, 0, id(digit_font), "--:--");
+      }
+      
 # Status-LED
 output:
   - platform: gpio
